# Agente-Roadmap-Jornada

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
Streamlit/: Dockerfile  requirements.txt  streamlit_app.py
backend/: Dockerfile  dependencies.py  main.py  requirements.txt
backend/ai_agent/: llm_service.py  prompt_maker.py
backend/ai_agent/llm_services/: base_client.py  deepseek_client.py  huggingface_client.py  openai_client.py  openrouter_client.py
backend/ai_agent/utils/: calendar_info.py  data_loader.py  select_model.py
backend/database/: db_handler.py  models.py  schemas.py
backend/prompt_files/: conteudo_curso.json  guidelines.txt
backend/routers/: chat.py  plan.py
backend/services/: chat_service.py  plan_service.py
data/: conteuo_curso.json  guidelines.txt  questionario_aluno.json
src/: config.py  llm_service.py  main.py  model_api.py  prompt_maker.py
src/llm_services/: deepseek_client.py  openai_client.py
src/utils/: calendar_info.py  data_loader.py
tests/: conftest.py  test_data_loader.py
