[tool.poetry]
name = "agente-roadmap-jornada"
version = "0.1.0"
description = ""
authors = ["krawcts <lucassampaio22k@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
huggingface-hub = "^0.29.3"
python-dotenv = "^1.0.1"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
